--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
     "apollo-link": "^1.2.12",
     "apollo-link-error": "^1.1.11",
     "apollo-link-http": "^1.5.15",
+    "autoprefixer": "^9.6.1",
     "dotenv": "^8.1.0",
     "graphql": "^14.5.3",
     "graphql-tag": "^2.10.1",
+    "postcss-cli": "^6.1.3",
     "vue": "^2.6.10",
     "vue-apollo": "^3.0.0-rc.2",
     "vue-router": "^3.0.7",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.6.0",
+    "@vue/babel-preset-app": "^3.11.0",
     "@vue/cli-plugin-babel": "^3.0.4",
     "@vue/cli-plugin-eslint": "^3.0.4",
     "@vue/cli-service": "^3.7.0",
@@ -54,8 +58,9 @@
     }
   },
   "browserslist": [
-    "> 1%",
+    "last 3 versions in US",
     "last 2 versions",
+    "> 1%",
     "not ie <= 8"
   ]
 }
